app/assets/stylesheets/application/todos.css.sass
// Place all the styles related to the todos controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.activity-items
  .activity-item-todo
    span.activate
    span.deactivate
      text-decoration: line-through

.content-item-todo
  padding-top: 10px
  padding-bottom: 10px
  border-left: 0!important
  border-right: 0!important
  .spacer
    display: none
  .move-handle
    background: url(/assets/move-todo.png) top center no-repeat
    height: 20px
    margin-left: 16px!important
    margin-top: 2px
  .content-item-options
    width: 100px
    left: -40px
    margin-top: -8px
    ul.nav.nav-pills
      margin: 0
      padding-left: 3px
      display: inline-block
      background: white
      border-radius: 5px
      > li
        float: right
        a
          padding-right: 4px
          padding-left: 4px
          i.icon-trash
            opacity: 0.5
        &:hover i.icon-trash
          opacity: 1
  .todo-checkbox
    float: left
    width: 20px
  .todo-title
    display: block
    float: left
    width: 90%
    padding-top: 2px
    p
      margin: 0

.dashboard,
.sidebar
  .content-todo-list
    .content-item-todo
      padding-top: 2px
      padding-bottom: 2px
      .spacer
        display: none
      .move-handle
        margin-left: -8px!important
      .todo-title


form.todo
  label
    display: none
  .controls
    margin-left: 0
    input
      width: 99%!important

